--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -50,12 +50,14 @@ dependencies:
   uni_links: ^0.5.1
   connectivity_plus: ^6.0.3
   url_launcher: ^6.0.20
-  location: ^5.0.0
+
   
   #get phone info for clockin
   device_info_plus: ^10.1.0
   permission_handler: ^11.3.1
-
+  # location
+  provider: ^6.0.0
+  location: ^5.0.0
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.6
